log
Wed 08 May 2024 02:18:33 AM UTC: 
 tests:  1|8
total_score: 0/70
b78d9dc
Wed 08 May 2024 02:22:53 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
74c48ec
Wed 08 May 2024 02:31:17 AM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
6b3590f
Thu 09 May 2024 06:51:07 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
 tests:  12|6
total_score: 15/70
57e4c54
Thu 09 May 2024 06:58:33 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
5d560ca
Thu 09 May 2024 07:08:42 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
235f377
Thu 09 May 2024 07:12:24 PM UTC: 
 treemap.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  0|0
fdf1122
Thu 09 May 2024 07:12:46 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
c57d1ab
Thu 09 May 2024 07:20:57 PM UTC: 
 treemap.c | 24 +++++++++++++++++-------
 1 file changed, 17 insertions(+), 7 deletions(-)
 tests:  18|3
total_score: 40/70
c5fa858
Thu 09 May 2024 07:21:34 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  18|3
total_score: 40/70
385bd9a
Thu 09 May 2024 07:21:56 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
3d55cf9
Thu 09 May 2024 07:29:02 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  18|3
total_score: 40/70
9ca65b0
Thu 09 May 2024 07:30:06 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
d99a7a0
Thu 09 May 2024 07:30:25 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
cbfaa61
Thu 09 May 2024 07:30:58 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
a16bb25
Thu 09 May 2024 07:39:38 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
b60d8cc
Thu 09 May 2024 07:41:39 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  25|1
total_score: 60/70
7e2fe41
Thu 09 May 2024 07:42:09 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  22|2
total_score: 50/70
dd0dcb2
Thu 09 May 2024 07:55:07 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
4428390
Thu 09 May 2024 07:55:27 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
7b20851
Thu 09 May 2024 08:00:02 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
212b392
Thu 09 May 2024 08:05:49 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
6d80f64
Thu 09 May 2024 08:10:36 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c:155:1: error: expected identifier or ‘(’ before ‘}’ token
  155 | }
      | ^
Compilation failed
a7d01cd
Thu 09 May 2024 08:11:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
d70d3f5
